[package]
name = "soros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.4.0"
thiserror = "1.0.58"
rand = "0.9.0-alpha.1"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
mio = { version = "0.8.11", features = ["os-poll", "net"] }
csv = "1.3.0"
